--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
+    "@nextui-org/dropdown": "^2.1.29",
+    "@nextui-org/popover": "^2.1.27",
+    "@nextui-org/react": "^2.4.6",
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
